# esp32imu

./: .gitignore  CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  py_esp32imu.cpp  setup.py.in
examples/: attitude_visualization.py  main.py  multi_cube.py  plotfreq.py  plotimu.py
firmware_serial/: esp32imu.h  firmware_serial.ino
firmware_udp/: firmware_udp.ino
include/esp32imu/: abstract_driver.h  serial_driver.h  udp_driver.h
include/protocol/: esp32imu.h
src/: abstract_driver.cpp  screenprint.cpp  serial_driver.cpp  udp_driver.cpp
